--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,12 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: '1.22.1' 
+          go-version: '1.16'  # Adjust the Go version as needed
+
+      - name: Install Dependencies
+        run: go mod download
+      
+
 
       - name: Run Tests
         run: go test ./backend/...
