--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,18 +14,17 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
           go-version: '1.16'  # Adjust the Go version as needed
 
       - name: Install Dependencies
-        run: go mod download
-      
-
-
+        run: go get .
+      - name: Build
+        run: go build ./backend/...
       - name: Run Tests
         run: go test ./backend/...
 
