--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
     steps:
        - name: Build
          working-directory: backend
-         run: go build ./...
+         run: go build 
        - name: Run Tests
          working-directory: backend
-         run: go test ./...
+         run: go test
 
