--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,9 +27,9 @@ jobs:
         working-directory: backend
         run: go get .
 
-      - name: Build
-        working-directory: backend
-        run: go build 
+      # - name: Build
+      #   working-directory: backend
+      #   run: go build 
       - name: Run Tests
         working-directory: backend
         run: go test
